--- a/saas-react/docker-compose.yml
+++ b/saas-react/docker-compose.yml
@@ -3,8 +3,8 @@ version: '3.8'
 services:
   saas-react:
     build: .
+    network_mode: "bridge"
     ports:
       - "3000:3000"
     environment:
       - NODE_ENV=production
-    command: serve -s dist -l 3000
